--- a/doc/agradecimientos.tex
+++ b/doc/agradecimientos.tex
@@ -1,4 +1,21 @@
 \agradecimientos{
-Quiero dar mi mas sincero agradecimiento a 
+Quiero dar mi mas sincero agradecimiento a Don Francisco Fern\'andez de Vega, por haberme dirigido este proyecto de fin de grado. Gracias por su paciencia y por las horas que ha dedicado a este proyecto d\'andole vuelta a ideas o simplemente pensando como podr\'ia quedar mejor la idea final. Sin olvidar su incondicional apoyo a mi trabajo, intentando siempre impulsar mi carrera tan alto como sea posible.
+
+Tambi\'en he de agradecer a Don Francisco Ch\'avez de la O, codirector de \'este proyecto, sin su voluntad y ganas de trabajar no se hubiera podido gestar la idea final que ha surgido. Agradecer las atenciones, el tiempo que ha perdido conmigo en el despliegue de las herramientas y sobre todo por su apoyo t\'ecnico y moral durante nuestra estancia Mexicana.
+
+A los miembros del laboratorio EvoVisi\'on de CICESE (Ensenada, M\'exico), en especial al Doctor Gustavo Olague y a algunos de sus estudiantes, Eddie y Daniel. Durante la estancia en su laboratorio fuimos especialmente acogidos, all\'i se desarroll\'o parte del proyecto y ellos tuvieron especial inter\'es proponiendo ideas.
+
+A los miembros del instituto tecnol\'ogico de Tijuana (M\'exico), teniendo especial atenci\'on con el Doctor Leonardo Trujillo y algunos de sus alumnos, Enrique y Yuliana, que consiguieron hacer de nuestra estancia una experiencia muy placentera y productiva, mostrando su interés por el proyecto y a\~nadi\'endole valor.
+
+A mi jefe y compa\~neros de trabajo en el CERN, los cuales han sido suficientemente flexibles para que pueda dedicarle alguna que otra hora de trabajo al proyecto, sin duda sin este tiempo no podr\'ia haberse llevado a cabo.
+
+A C\'esar Benavides, sin el cual no podr\'ia haberse realizado la integraci\'on del proyecto de reconocimiento facial. Agradecerle el haber hecho su implementaci\'on compatible con las necesidades del proyecto y el tiempo perdido en nuestras continuas reuniones virtuales.
+
+En general, a todos aquellos profesores y alumnos del Centro Universitario de M\'erida que de una u otra forma me han ayudado a realizar este proyecto, que aunque no les mencione de forma expl\'icita, no les puedo negar un sincero agradecimiento.
+
+Finalmente me gustar\'ia agradecer especialmente el apoyo que me han dado mis padres, Ana y Liborio, los cuales me animan con todo lo que me propongo y como no pod\'ia ser de otra manera tambi\'en he tenido su motivaci\'on y empuje para este proyecto, preocup\'andose de su evoluci\'on en todo momento.
+
+Tambi\'en agradecer a mis amigos Rafa y Carlos, los cuales me han aguant\'ado durante buena parte de la realizaci\'on del proyecto ayudando de una manera u otra en todo lo que estuviera en sus manos.
+
 A todos muchas gracias.
 }
