Documentacion: prologo y conclusiones

--- a/doc/agradecimientos.tex
+++ b/doc/agradecimientos.tex
@@ -13,9 +13,9 @@ A C\'esar Benavides, sin el cual no podr\'ia haberse realizado la integraci\'on 
 
 En general, a todos aquellos profesores y alumnos del Centro Universitario de M\'erida que de una u otra forma me han ayudado a realizar este proyecto, que aunque no les mencione de forma expl\'icita, no les puedo negar un sincero agradecimiento.
 
-Finalmente me gustar\'ia agradecer especialmente el apoyo que me han dado mis padres, Ana y Liborio, los cuales me animan con todo lo que me propongo y como no pod\'ia ser de otra manera tambi\'en he tenido su motivaci\'on y empuje para este proyecto, preocup\'andose de su evoluci\'on en todo momento.
-
 Tambi\'en agradecer a mis amigos Rafa y Carlos, los cuales me han aguant\'ado durante buena parte de la realizaci\'on del proyecto ayudando de una manera u otra en todo lo que estuviera en sus manos.
 
-A todos muchas gracias.
+Finalmente me gustar\'ia agradecer especialmente el apoyo que me han dado mis padres, Ana y Liborio, los cuales me animan con todo lo que me propongo y como no pod\'ia ser de otra manera tambi\'en he tenido su motivaci\'on y empuje para este proyecto, preocup\'andose de su evoluci\'on en todo momento.
+
+A todos, muchas gracias.
 }
